# atomate2-lammps

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: testing.yml
src/atomate2/lammps/: files.py  run.py  settings.py
src/atomate2/lammps/common/: __init__.py  conditions.py  stopping_criteria.py  units.py
src/atomate2/lammps/flows/: core.py
src/atomate2/lammps/jobs/: base.py  core.py
src/atomate2/lammps/schemas/: task.py
src/atomate2/lammps/sets/: __init__.py  base.py
tests/: conftest.py
tests/lammps/flows/: test_core.py
