[build-system]
requires = ["setuptools >= 42", "versioningit ~= 1.0", "wheel"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages]
find = {namespaces = true}

[project]
name = "atomate2-lammps"
description = "atomate2-lammps is an add-on to the atomate2 library of materials science workflows"
readme = "README.md"
keywords = ["high-throughput", "automated", "workflow", "molecular dynamics", "lammps"]
license = { text = "modified BSD" }
authors = [{ name = "Matthew Evans", email = "matthew.evans@matgenix.com" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies =[
    "atomate2",
    "pymatgen"
]

[project.optional-dependencies]
dev = ["atomate2[dev]"]
docs = ["atomate2[docs]"]
tests = ["atomate2[tests]"]
strict = ["atomate2[strict]"]

[project.urls]
repository = "https://github.com/matgenix/atomate2-lammps"
changelog = "https://github.com/matgenix/atomate2-lammps/blob/main/CHANGELOG.md"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
max-doc-length = 88
select = "C, E, F, W, B"
extend-ignore = "E203, W503, E501, F401, RST21"
min-python-version = "3.8.0"
docstring-convention = "numpy"
rst-roles = "class, func, ref, obj"

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true
expand-star-imports = true
